// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNotifications /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class="sc-gicCDI"
  >
    <label
      class="sc-himrzO pijHq"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-fLlhyt emHXsh sc-bZkfAO eobqRk"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-ciZhAO fropdU"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-himrzO pijHq"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="sc-ikZpkk dXeYRL"
      placeholder="Type"
    >
      <div
        class="sc-fLlhyt emHXsh"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-bZnhIo hIKVOK"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-bjUoiL hCXTDD sc-ezWOiH xGiQw"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD admin-notifications__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload notifications
      </span>
    </button>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG kLlReR"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class="sc-gicCDI"
  >
    <label
      class="sc-himrzO pijHq"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-fLlhyt emHXsh sc-bZkfAO eobqRk"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-ciZhAO fropdU"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-himrzO pijHq"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="sc-ikZpkk dXeYRL"
      placeholder="Type"
    >
      <div
        class="sc-fLlhyt emHXsh"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-iAvgwm gFnleV"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-bjUoiL hCXTDD sc-ezWOiH xGiQw"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD admin-notifications__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload notifications
      </span>
    </button>
  </div>
  <span
    class="sc-dmRaPn bsyMtp"
  >
    <span
      class="sc-kgflAQ daSGn"
    >
      Could not load notifications
      <br />
      Something went wrong
    </span>
  </span>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class="sc-gicCDI"
  >
    <label
      class="sc-himrzO pijHq"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-fLlhyt emHXsh sc-bZkfAO eobqRk"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-ciZhAO fropdU"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-himrzO pijHq"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="sc-ikZpkk dXeYRL"
      placeholder="Type"
    >
      <div
        class="sc-fLlhyt emHXsh"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-iTONeN dALTTh"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-bjUoiL hCXTDD sc-ezWOiH xGiQw"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-bjUoiL kQkTFv admin-notifications__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-dIouRR dQEKTW"
      >
        Reload notifications
      </span>
      <div
        aria-hidden="true"
        class="sc-hHLeRK dAWrmh"
      >
        <div
          class="sc-fnykZs gCEWdg"
        >
          <div
            class="sc-fEOsli lkTqOy"
          />
          <div
            class="sc-fEOsli dxKqkG"
          />
          <div
            class="sc-fEOsli dGpXuh"
          />
          <div
            class="sc-fEOsli cIgRdg"
          />
          <div
            class="sc-fEOsli gZzohb"
          />
          <div
            class="sc-fEOsli zmfC"
          />
          <div
            class="sc-fEOsli gacaki"
          />
          <div
            class="sc-fEOsli cIrbJy"
          />
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with notifications 1`] = `
<div>
  <div>
    <div
      class="sc-kDDrLX emakin"
    >
      <a
        class="sc-iBkjds kXOvCG"
        href="/admin"
      >
        ⇠ Admin
      </a>
    </div>
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
    >
      Admin notifications
    </h1>
  </div>
  <div
    class="sc-gicCDI"
  >
    <label
      class="sc-himrzO pijHq"
      for="message_FORM_ID"
    >
      Message
    </label>
    <div
      class="sc-fLlhyt emHXsh sc-bZkfAO eobqRk"
      placeholder="Message"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-ciZhAO fropdU"
        id="message_FORM_ID"
        name="Message"
        value=""
      />
      <svg
        class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-himrzO pijHq"
      for="type_FORM_ID"
    >
      Type
    </label>
    <div
      class="sc-ikZpkk dXeYRL"
      placeholder="Type"
    >
      <div
        class="sc-fLlhyt emHXsh"
      >
        <select
          aria-disabled="false"
          aria-invalid="false"
          class="sc-efBctP kwETPg"
          id="type_FORM_ID"
          name="Type"
        >
          <option
            value="success"
          >
            Success (green)
          </option>
          <option
            value="warn"
          >
            Warning (orange)
          </option>
          <option
            value="error"
          >
            Error (red)
          </option>
        </select>
        <svg
          class="sc-gKXOVf ktoyia sc-jdAMXn dIUcEF"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
    </div>
    <button
      class="sc-bjUoiL hCXTDD sc-ezWOiH xGiQw"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Create notification
      </span>
    </button>
  </div>
  <div>
    <button
      class="sc-bjUoiL hCXTDD admin-notifications__control"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Reload notifications
      </span>
    </button>
  </div>
  <div
    class="admin-notifications__entity"
  >
    <div
      class="notification-comp__notification notification-comp__notification--success"
    >
      message1
    </div>
    <button
      class="sc-bjUoiL eoymkC outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Remove
      </span>
    </button>
  </div>
  <div
    class="admin-notifications__entity"
  >
    <div
      class="notification-comp__notification notification-comp__notification--warn"
    >
      message2
    </div>
    <button
      class="sc-bjUoiL eoymkC outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Remove
      </span>
    </button>
  </div>
  <div
    class="admin-notifications__entity"
  >
    <div
      class="notification-comp__notification notification-comp__notification--error"
    >
      message3
    </div>
    <button
      class="sc-bjUoiL eoymkC outer"
      type="button"
    >
      <span
        class="sc-dIouRR ixIogl"
      >
        Remove
      </span>
    </button>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-iqcoie fvEXqf"
  >
    <h1
      class="sc-gsnTZi cTWewb sc-breuTD kCJHVK"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dmRaPn bsyMtp"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
